# plan

./: Cargo.toml  Makefile  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
src/: agent.rs  cli.rs  epic.rs  hub.rs  main.rs  session.rs  state.rs  ticket.rs
