[package]
name = "plan"
version = "0.1.0"
edition = "2021"
description = "A CLI task tracker for AI agents and humans"
license = "MIT"
repository = "https://github.com/Marlinski/plan"

[[bin]]
name = "plan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
toml = "0.8"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
